Doc/force-app/main/default/objects/Case/fields/Incorrect_SOW__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_SOW__c</fullName>
    <description>BIZ-50209</description>
    <label>Incorrect SOW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dates</fullName>
            </value>
            <value>
                <fullName>Entity/ Legal Name</fullName>
            </value>
            <value>
                <fullName>Master Terms Reference</fullName>
            </value>
            <value>
                <fullName>Need Updated Version</fullName>
            </value>
            <value>
                <fullName>Scoping Detail</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Unable to Open Attachment</fullName>
            </value>
            <value>
                <fullName>Watermark</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>