Doc/force-app/main/default/objects/Case/fields/Initial_Fulfillment_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fulfillment_Date__c</fullName>
    <description>Date which items were initially promised to be delivered</description>
    <label>Initial Fulfillment Date</label>
    <type>Date</type>
</CustomField>