Doc/force-app/main/default/objects/Case/fields/Intake_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Intake_Ownership__c</fullName>
    <formula>TEXT(Account.IntApp_Open_Intake__c)</formula>
    <label>Intake - Ownership</label>
    <type>Text</type>
</CustomField>