Doc/force-app/main/default/objects/Case/fields/Intapp_750__c.field-meta.xml
<CustomField>
    <fullName>Intapp_750__c</fullName>
    <formula>Account.Intapp_Legal_750__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intapp 750#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>