Doc/force-app/main/default/objects/Case/fields/Internal_Cloud_Case__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cloud_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to differentiate support cases that are for internal cloud work. The customer will not be notified of case creation/closing when this box is checked, and the case will not  be visible in the portal.</description>
    <label>Internal Cloud Case</label>
    <type>Checkbox</type>
</CustomField>