Doc/force-app/main/default/objects/Case/fields/JIRA_Assignee__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Assignee__c</fullName>
    <label>JIRA Assignee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>