Doc/force-app/main/default/objects/Case/fields/JIRA_Business_Driver__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Business_Driver__c</fullName>
    <label>JIRA Business Driver</label>
    <length>50</length>
    <type>Text</type>
</CustomField>