Doc/force-app/main/default/objects/Case/fields/JIRA_Component__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Component__c</fullName>
    <label>JIRA Component</label>
    <length>200</length>
    <type>Text</type>
</CustomField>