Doc/force-app/main/default/objects/Case/fields/JIRA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Created_Date__c</fullName>
    <label>JIRA Created Date</label>
    <type>DateTime</type>
</CustomField>