Doc/force-app/main/default/objects/Case/fields/JIRA_Fix_For__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Fix_For__c</fullName>
    <label>JIRA Fix Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>