Doc/force-app/main/default/objects/Case/fields/JIRA_Issue__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Issue__c</fullName>
    <label>JIRA Issue</label>
    <length>10</length>
    <type>Text</type>
</CustomField>