Doc/force-app/main/default/objects/Case/fields/JIRA_Priority__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Priority__c</fullName>
    <label>JIRA Priority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>