Doc/force-app/main/default/objects/Case/fields/JIRA_Product__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Product__c</fullName>
    <label>JIRA Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>