Doc/force-app/main/default/objects/Case/fields/JIRA_Status__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Status__c</fullName>
    <label>JIRA Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>