Doc/force-app/main/default/objects/Case/fields/JIRA_Summary__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Summary__c</fullName>
    <label>JIRA Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>