Doc/force-app/main/default/objects/Case/fields/JIRA_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Updated_Date__c</fullName>
    <label>JIRA Updated Date</label>
    <type>DateTime</type>
</CustomField>