Doc/force-app/main/default/objects/Case/fields/LastBasecampSynch__c.field-meta.xml
<CustomField>
    <fullName>LastBasecampSynch__c</fullName>
    <description>This date and time represents the last time this case successfully received data (messages) from a corresponding basecamp project</description>
    <label>LastBasecampSynch</label>
    <type>DateTime</type>
</CustomField>