Doc/force-app/main/default/objects/Case/fields/Lastest_Case_Comment_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lastest_Case_Comment_Owner__c</fullName>
    <description>For Executive Support Cases, this field stores the person that made the latest case comment.</description>
    <label>Lastest Case Comment Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>