Doc/force-app/main/default/objects/Case/fields/Latest_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comment__c</fullName>
    <description>This is a replication of the latest case comment for use in reporting on Executive Support Cases only.</description>
    <label>Latest Case Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>