Doc/force-app/main/default/objects/Case/fields/Latest_Case_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Comment_Date__c</fullName>
    <description>For Executive Support Cases, this is the date of the most recent case comment added.</description>
    <label>Latest Case Comment Date</label>
    <type>Date</type>
</CustomField>