Doc/force-app/main/default/objects/Case/fields/Lead_Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Lead_Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look-up field to determine who the SE is.</description>
    <inlineHelpText>Please pick the lead SE working on this project.</inlineHelpText>
    <label>SE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>