Doc/force-app/main/default/objects/Case/fields/Missing_Backup__c.field-meta.xml
<CustomField>
    <fullName>Missing_Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Backup</label>
    <type>Checkbox</type>
</CustomField>