Doc/force-app/main/default/objects/Case/fields/Missing_Patch_Check__c.field-meta.xml
<CustomField>
    <fullName>Missing_Patch_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Patch Check</label>
    <type>Checkbox</type>
</CustomField>