Doc/force-app/main/default/objects/Case/fields/NPI_Account__c.field-meta.xml
<CustomField>
    <fullName>NPI_Account__c</fullName>
    <formula>IF(
   Account.Active_NPI_Project__c = true,
    TRUE,
    FALSE
)</formula>
    <inlineHelpText>Please review the custom report &quot;NPI Projects&quot;. If the case being opened for the product that the NPI project is for, please contact npi@intapp.com. Otherwise, please use normal procedures for this support case.</inlineHelpText>
    <label>NPI Account</label>
    <type>Checkbox</type>
</CustomField>