Doc/force-app/main/default/objects/Case/fields/NPS_Positive_Count__c.field-meta.xml
<CustomField>
    <fullName>NPS_Positive_Count__c</fullName>
    <formula>IF(Survey_RecommendationScore_Number__c&gt;8,1,0)</formula>
    <label>NPS Positive Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>