Doc/force-app/main/default/objects/Case/fields/Online_Resource__c.field-meta.xml
<CustomField>
    <fullName>Online_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Resource</label>
    <type>Checkbox</type>
</CustomField>