Doc/force-app/main/default/objects/Case/fields/OP4I_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Sales_Segment__c</fullName>
    <description>Custom Formula Field Built according to BIZ-47763,BIZ-50210</description>
    <formula>IF( ISBLANK(Quote__r.OP4I_Sales_Segment__c) ,  TEXT(Case_Partner__r.OP4I_Sales_Segment__c) , Quote__r.OP4I_Sales_Segment__c)</formula>
    <label>OP4I Sales Segment</label>
    <type>Text</type>
</CustomField>