Doc/force-app/main/default/objects/Case/fields/Orginating_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Orginating_Case_Number__c</fullName>
    <label>Orginating Case Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>