Doc/force-app/main/default/objects/Case/fields/OSA_Instructions_Changes__c.field-meta.xml
<CustomField>
    <fullName>OSA_Instructions_Changes__c</fullName>
    <description>To displays all the Case comments under the case</description>
    <label>OSA Instructions / Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>