Doc/force-app/main/default/objects/Case/fields/Other_platforms_for_sent_email_capture__c.field-meta.xml
<CustomField>
    <fullName>Other_platforms_for_sent_email_capture__c</fullName>
    <inlineHelpText>If you will be integrating iPhone/iPad or Android devices with Time Builder, select platforms used in your organization from the drop-down list.</inlineHelpText>
    <label>Other platforms for sent email capture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPhone/iPad</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iPhone/iPad &amp; Android</fullName>
            </value>
            <value>
                <fullName>Other Device Sent Email Capture Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>