Doc/force-app/main/default/objects/Case/fields/Partner_Dollars_Paid_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Partner_Dollars_Paid_Implementation__c</fullName>
    <label>Partner Dollars Paid</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>