Doc/force-app/main/default/objects/Case/fields/Partner_Hours_Invoiced_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Partner_Hours_Invoiced_Implementation__c</fullName>
    <label>Partner Hours Invoiced</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>