Doc/force-app/main/default/objects/Case/fields/Partner_Hours_Paid_Training__c.field-meta.xml
<CustomField>
    <fullName>Partner_Hours_Paid_Training__c</fullName>
    <label>Partner Hours Paid (Training)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>