Doc/force-app/main/default/objects/Case/fields/Partner_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Partner_Hours_Remaining__c</fullName>
    <formula>Total_Hours__c  -  Partner_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>