Doc/force-app/main/default/objects/Case/fields/Partner_Invoice_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Partner_Invoice_Numbers__c</fullName>
    <label>Partner Invoice Numbers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>