Doc/force-app/main/default/objects/Case/fields/Phase_1_Forecasted_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Forecasted_End_Date__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 1: Solution Design</inlineHelpText>
    <label>Phase 1: Forecasted End Date</label>
    <type>Date</type>
</CustomField>