Doc/force-app/main/default/objects/Case/fields/Phase_2_Baseline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Baseline_End_Date__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 2: Build and Test</inlineHelpText>
    <label>Phase 2: Baseline End Date</label>
    <type>Date</type>
</CustomField>