Doc/force-app/main/default/objects/Case/fields/Phase_2_RAG__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_RAG__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 2: Build and Test</inlineHelpText>
    <label>Phase 2: RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>