Doc/force-app/main/default/objects/Case/fields/Phase_3_Baseline_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_3_Baseline_End_Date__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Phase 3: User Acceptance Testing</inlineHelpText>
    <label>Phase 3: Baseline End Date</label>
    <type>Date</type>
</CustomField>