Doc/force-app/main/default/objects/Case/fields/Phase_4_Expected__c.field-meta.xml
<CustomField>
    <fullName>Phase_4_Expected__c</fullName>
    <description>SC-000036</description>
    <label>Phase 4: Expected %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>