Doc/force-app/main/default/objects/Case/fields/Portal_Origin_Count__c.field-meta.xml
<CustomField>
    <fullName>Portal_Origin_Count__c</fullName>
    <formula>IF(ISPICKVAL(Origin,&quot;Customer Portal&quot;),1,0)</formula>
    <label>Portal Origin Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>