Doc/force-app/main/default/objects/Case/fields/Premium_Support_Products__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support_Products__c</fullName>
    <formula>Account.Premium_Support_Products__c</formula>
    <label>Premium Support Products</label>
    <type>Text</type>
</CustomField>