Doc/force-app/main/default/objects/Case/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>