Doc/force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activity Tracker</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>CC/RC</fullName>
            </value>
            <value>
                <fullName>C I D</fullName>
            </value>
            <value>
                <fullName>CompliGuard Analyze</fullName>
            </value>
            <value>
                <fullName>CompliGuard Flow</fullName>
            </value>
            <value>
                <fullName>CompliGuard Protect</fullName>
            </value>
            <value>
                <fullName>Contract Express</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>DTE Axiom Mobile</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Conflicts Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Flow Cloud</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Intake Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Conflicts</fullName>
            </value>
            <value>
                <fullName>Integration Builder</fullName>
                <label>Intapp Integrate</label>
            </value>
            <value>
                <fullName>Terms of Business</fullName>
                <label>Intapp Terms</label>
            </value>
            <value>
                <fullName>Intapp Terms Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Time Cloud</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
                <label>Intapp Walls</label>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>OnePlace_AWS</fullName>
                <label>OnePlace - AWS</label>
            </value>
            <value>
                <fullName>OnePlace_Salesforce</fullName>
                <label>OnePlace - Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>