Doc/force-app/main/default/objects/Case/fields/Product_Component__c.field-meta.xml
<CustomField>
    <fullName>Product_Component__c</fullName>
    <description>Product Component mapped to Product Selection. Used for JIRA integration.</description>
    <inlineHelpText>Please select the product component from the list.</inlineHelpText>
    <label>Product Component</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting Integration</fullName>
            </value>
            <value>
                <fullName>Adding/Modifying Users</fullName>
            </value>
            <value>
                <fullName>Additional Party</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Admin Reports</fullName>
            </value>
            <value>
                <fullName>Admin Tool</fullName>
            </value>
            <value>
                <fullName>Admin Tools</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>AT Documentation</fullName>
            </value>
            <value>
                <fullName>AT Installer</fullName>
            </value>
            <value>
                <fullName>AT Rules</fullName>
            </value>
            <value>
                <fullName>AT Scheduler</fullName>
            </value>
            <value>
                <fullName>Attorney/User Info</fullName>
            </value>
            <value>
                <fullName>Attorney Desktop Module</fullName>
            </value>
            <value>
                <fullName>AT Web Application</fullName>
            </value>
            <value>
                <fullName>Audit Letter</fullName>
            </value>
            <value>
                <fullName>Automated Processes</fullName>
            </value>
            <value>
                <fullName>Axiom Server</fullName>
            </value>
            <value>
                <fullName>Barriers</fullName>
            </value>
            <value>
                <fullName>Blackberry</fullName>
            </value>
            <value>
                <fullName>Blackberry Extension</fullName>
            </value>
            <value>
                <fullName>Blackberry OS4x to 6.x</fullName>
            </value>
            <value>
                <fullName>Capture Desktop Extension</fullName>
            </value>
            <value>
                <fullName>Capture Website</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client/Matter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>