Doc/force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>IF( 
ISPICKVAL(Product__c, &quot;Conflicts&quot;), 
&quot;Intapp Open - Conflicts&quot;, 
IF( 
OR( 
ISPICKVAL(Product__c, &quot;Intake&quot;), 
ISPICKVAL(Product__c, &quot;Intapp Flow&quot;), 
ISPICKVAL(Product__c, &quot;Terms of Business&quot;), 
ISPICKVAL(Product__c, &quot;Contract Express&quot;) 
), 
&quot;Intapp Open - Intake&quot;, 
IF( 
ISPICKVAL(Product__c, &quot;Integration Builder&quot;), 
&quot;Integration Builder&quot;, 
IF( 
  OR( 
    ISPICKVAL(Product__c, &quot;LegalKey&quot;), 
    ISPICKVAL(Product__c, &quot;Compliguard Analyze&quot;), 
    ISPICKVAL(Product__c, &quot;Compliguard Flow&quot;), 
    ISPICKVAL(Product__c, &quot;Compliguard Protect&quot;) 
  ), 
  &quot;TFG - Other&quot;, 
IF( 
  OR( 
    ISPICKVAL(Product__c, &quot;DTE&quot;), 
    ISPICKVAL(Product__c, &quot;DTE Axiom&quot;), 
    ISPICKVAL(Product__c, &quot;Intapp Time&quot;), 
    ISPICKVAL(Product__c, &quot;Time Builder&quot;), 
    ISPICKVAL(Product__c, &quot;RollCall&quot;) 
  ), 
  &quot;Intapp Time&quot;, 
IF( 
  ISPICKVAL(Product__c, &quot;Rekoop&quot;), 
  &quot;Intapp Time - Cloud&quot;, 
IF( 
  OR( 
    ISPICKVAL(Product__c, &quot;Wall Builder&quot;), 
    ISPICKVAL(Product__c, &quot;Activity Tracker&quot;) 
  ), 
  &quot;Wall Builder&quot;, 
IF( 
OR( 
ISPICKVAL(Product__c, &quot;gES&quot;), 
ISPICKVAL(Product__c, &quot;gES – Outlook&quot;) 
), 
&quot;gES&quot;, 
IF(
ISPICKVAL(Product__c, &quot;IIS&quot;),
&quot;Integration Service - Cloud&quot;,
IF(
ISPICKVAL(Product__c, &quot;Pricing&quot;),
&quot;Pricing - Cloud&quot;,
IF(
ISPICKVAL(Product__c, &quot;Sisense&quot;),
&quot;Placeholder&quot;,
&quot;Error&quot; 
)))))))))))</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>