Doc/force-app/main/default/objects/Case/fields/Product_Version__c.field-meta.xml
<CustomField>
    <fullName>Product_Version__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <label>Product Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>