Doc/force-app/main/default/objects/Case/fields/ProductVersion__c.field-meta.xml
<CustomField>
    <fullName>ProductVersion__c</fullName>
    <label>Product Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>