Doc/force-app/main/default/objects/Case/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Phase</label>
    <type>Text</type>
</CustomField>